# trading_bot

./: .gitignore  METHOD.md  README.md  pyproject.toml  requirements.txt
a_share_quant/: .gitignore  README.md  method.md  pyproject.toml  requirements.txt
a_share_quant/configs/: default.yaml
a_share_quant/data/cache/: bars.sqlite  candidate_symbols.txt
a_share_quant/reports/: backtest_summary.json  backtest_summary_cn.md  benchmark_returns.csv  benchmark_summary.csv  daily_universe_size.csv  equity_curve.csv  exposure_report.csv  factor_group_returns.csv  factor_group_summary.csv  factor_ic.csv  factor_ic_daily.csv  industry_exposure.csv  parameter_grid.csv  positions.csv  regime_performance.csv  research_report.md  rolling_oos_eval.csv  single_factor_backtests.csv  strategy_comparison.csv  strategy_diagnostic_report.md  top_holdings.csv  trades.csv  universe_diagnostics.csv  walk_forward.csv  walk_forward_selection.csv  yearly_performance.csv
a_share_quant/scripts/: download_data.py  download_history_incremental.py  fetch_one_symbol.py  generate_report.py  run_backtest.py  run_research.py
a_share_quant/src/ashare_quant/: __init__.py  config.py  logger.py  pipeline.py
a_share_quant/src/ashare_quant/backtest/: __init__.py  broker.py  cost.py  engine.py  matching.py  metrics.py  result.py
a_share_quant/src/ashare_quant/data/: adjust.py  (+7 more)
a_share_quant/tests/: real_data.py  test_backtest_smoke.py  test_cost_model.py  test_metrics.py  test_no_lookahead.py  test_real_data_constraints.py  test_rebalance.py  test_research_diagnostics.py  test_research_extensions.py
(+611 files in other folders)
